refactored code for better readability and maintenance

--- a/index.html
+++ b/index.html
@@ -78,6 +78,8 @@
   <!-- Leaflet Draw -->
   <script src="https://unpkg.com/leaflet-draw@1.0.4/dist/leaflet.draw.js"></script>
 
+  <script src="js/constants.js"></script>
+  <script src="js/utils.js"></script>
   <script src="js/map.js"></script>
 </body>
 </html>
