added sharing markers and lines

--- a/index.html
+++ b/index.html
@@ -67,6 +67,8 @@
 	
 	    <h4>Lines:</h4>
 	    <ul id="lineList"></ul>
+			<button id="shareBtn">Share</button>
+			<button id="clearBtn">Clear</button>
 	  </div>
 	</div>
 
